@@ -9,7 +9,7 @@ Version 1.6.2+svn:
 
   * User interface
     * Fixed the MP password textbox handling of special characters.
-
+    * Increase the lineheight in the new dialogs.
 
 Version 1.6.2:
  * Campaigns
