@@ -4,6 +4,7 @@ Version 1.6.2+svn:
      French, German, Icelandic, Italian, Lithuanian, Russian, Serbian, Slovak
  * User interface:
    * Fixed an multi-character UTF-8 handling bug in the password textbox
+   * Increase the lineheight in the new dialogs
 
 Version 1.6.2:
  * Campaigns:
